Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-8064

test_min_max_filters is flaky

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • ghx-label-7

    Description

      The following configuration of the test_min_max_filters:

      query_test.test_runtime_filters.TestMinMaxFilters.test_min_max_filters[protocol: beeswax | exec_option: {'batch_size': 0, 'num_nodes': 0, 'disable_codegen_rows_threshold': 0, 'disable_codegen': False, 'abort_on_error': 1, 'debug_action': None, 'exec_single_node_rows_threshold': 0} | table_format: kudu/none]

      It produces a higher aggregation of sumĀ over the proberows than expected:

      query_test/test_runtime_filters.py:113: in test_min_max_filters     self.run_test_case('QueryTest/min_max_filters', vector) 
      common/impala_test_suite.py:518: in run_test_case     update_section=pytest.config.option.update_results) 
      common/test_result_verifier.py:612: in verify_runtime_profile     % (function, field, expected_value, actual_value, actual)) 
      E   AssertionError: Aggregation of SUM over ProbeRows did not match expected results. 
      E   EXPECTED VALUE: E   619 
      E    ACTUAL VALUE: E   652
      

      This test was introduced in the patch for IMPALA-6533. The failure occurred during an ASAN build.

      Attachments

        Issue Links

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            poojanilangekar Pooja Nilangekar
            poojanilangekar Pooja Nilangekar
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment