IMPALA-8064: Fix intermittent test failures from test_min_max_filters

test_min_max_filters and test_decimal_min_max_filters records the aggregated probe rows to
check whether min-max filter was exercised.  In the case of ASAN builds, the probe side
started processing before the filters reached the probe side, because ASAN builds are a
little slower.  The resolution was to increase RUNTIME_FILTER_WAIT_TIME_MS to accommodate ASAN.
After this patch was merged, https://gerrit.cloudera.org/#/c/12224/ the issue is still seen.

After further analysis, it was found from the profile that though RUNTIME_FILTER_WAIT_TIME_MS
was set to 100000, the probe side waited for much less than 100000.
-- Begin Profile Snippet where probe side waited for 36768 ms instead of 100000
      Instance 2b4a14d9933eb108:7565b86500000005 (host=downstream-jenkins-host:22002):(Total: 1m42s, non-child: 0.000ns, % non-child: 0.00%)
        HASH_JOIN_NODE (id=2):(Total: 39s251ms, non-child: 6.999ms, % non-child: 0.01%)
            Runtime filters: 1 of 1 Runtime Filter Published
        KUDU_SCAN_NODE (id=0):(Total: 36s812ms, non-child: 36s812ms, % non-child: 100.00%)
          Runtime filters: Not all filters arrived (arrived: [], missing [1]), waited for 36s768ms
-- End Profile Snippet

After analyzing the code we found that in ScanNode::WaitForRuntimeFilters, int32 was used for time.
But it should be using int64.  This is something that needs to be fixed.  There is some probability
that using 32 bit caused an overflow resulting in the actual wait time shown in profile to be less
than 100000.

This patch fixes the time variables in ScanNode::WaitForRuntimeFilters to int64.

Change-Id: I7d560adfb098be455a5a89c6de76ac1f17d1d3e3
Reviewed-on: http://gerrit.cloudera.org:8080/12269
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>